7/Program/Report/error
/Users/yuka/GoogleDrive/School/Subjects/Digital_Signal_Processing_I/7/Report/dsp1-5.c:67:3: error: use of undeclared identifier 'dft'
                dft += (double)(t_end - t_start)/(double)CLOCKS_PER_SEC;
                ^
1 error generated.
